added keyword endpoints
